src/test/deca/syntax/invalid/our_synt_tests/robin-test1-assig.deca
// Error: trying to do an assignation with a non-value value.

{
    int a = 0;
    int b = 1;
    a = b;
    b = if;
}
